Fix osm-field z-index

--- a/cosinnus/static/css/osm_field.css
+++ b/cosinnus/static/css/osm_field.css
@@ -6,7 +6,7 @@ div.osmfield-wrapper {
 div.osmfield-map {
     height: 250px;
     border: 1px solid black;
-    z-index: 1000;
+    z-index: 2;
 }
 input.osmfield.osmfield-input {
     border-width: 0;
